# sysopy

./: .gitignore  README.md
cw01/: CMakeLists.txt
cw01/zad1/: Makefile  addr.c  addr.h  addrbook.c  addrbook.h  bst.c  bst.h  linked_list.c  linked_list.h  utils.h
cw01/zad2/: main.c
cw01/zad3a/: .gitignore  Makefile  results.txt
cw01/zad3b/: .gitignore  Makefile  komentarz.txt  results_O0.txt  results_O2.txt  results_O3.txt  results_Os.txt
cw01/zad4/: Makefile  core.7890  data.h  gdb.txt  main.c
cw02/: CMakeLists.txt
cw02/zad1/: .gitignore  Makefile  komentarz.txt  main.c  wyniki.txt
cw02/zad2/: main.c
cw02/zad3/: Makefile  komentarz.txt  main.c
cw03/: CMakeLists.txt
cw03/zad1/: .gitignore  Makefile  dump.c  main.c  test_script.janush
cw03/zad2/: .gitignore  Makefile  badboy.c  main.c  test_script2.janush
cw04/: CMakeLists.txt
cw04/zad1/: main.c
cw04/zad2/: Makefile  main.c
cw04/zad3/: main.c
cw05/: CMakeLists.txt
cw05/zad1/: Makefile  main.c
cw05/zad2/: Makefile  main.c  zad2
cw06/: CMakeLists.txt
cw06/zad1/: Makefile  common.h  klient.c  serwer.c
cw06/zad2/: Makefile  common.h  klient.c  serwer.c
cw07/: CMakeLists.txt
cw07/zad1/: Makefile  main.c
cw07/zad2/: Makefile  main.c
cw08/: CMakeLists.txt
cw08/zad1/: Makefile  common.h  input.txt  mkf.c  sample.txt  zad1a.c  zad1b.c  zad1c.c
cw08/zad2/: Makefile  zad2.report  zad2a.c  zad2b.c
cw09/: CMakeLists.txt
cw09/zad1/: Makefile  main.c
cw09/zad2/: Makefile  main.c
cw1/: CMakeLists.txt  bst.c  bst.h  linked_list.c  linked_list.h  utils.h
cw1/addrbook/: addrbook.c  bst.c  linked_list.h  utils.h
cw10/: CMakeLists.txt
cw10/zad1/: klient.c  serwer.c  task.h
cw10/zad2/: Makefile  klient.c  serwer.c
